--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,18 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/<使うやつ>
+    steps:
+      - checkout
+      - run: bash generate-readme.sh
+      - run: git config user.name "CircleCI"
+      - run: git config user.email "circleci@gh.com"
+      - run: git add README.md
+      - run: git commit -m 'Update README.md [ci skip]'
+      - run: git push origin master
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  version: 2
+  build_and_test:
     jobs:
-      - welcome/run
+      - build
