--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/<使うやつ>
+      - image: circleci/node:4.8.2
     steps:
       - checkout
       - run: bash generate-readme.sh
